examples/test/testpolicy2557.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2557
  namespace: namespace194
spec:
  podSelector:
    matchLabels:
      key5: value13
      key17: value24
      key36: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value39
      podSelector:
        matchLabels:
          key5: value9
          key0: value3
